syntax = "proto3";

package metrics;

option go_package = "./proto";

message Metric {
  string service_name = 1;
  int32 cpu_usage = 2;
  int32 memory_usage = 3;
}

message Ack {
  string message = 1;
}

service MetricsService {
  rpc StreamMetrics(stream Metric) returns (Ack);
}